[metadata]
name = kill_timeout
author = Andrew Grigorev
author-email = andrew@ei-grad.ru
summary = Limit the function execution time
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
home-page = https://github.com/ei-grad/kill-timeout
project_urls =
    Bug Tracker = https://github.com/ei-grad/kill-timeout/issues
    Source Code = https://github.com/ei-grad/kill-timeout.git
license = MIT
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    kill
    timeout
python_requires = >=3.7

[files]
modules =
    kill_timeout
